api-grpc/deploy/gateway/envoy/wasm-plugin/plugins/grpc/envoy.yaml
static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 18000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        # 把 /user 開頭的 REST request 轉成 gRPC
                        - match:
                            prefix: "/user"
                          route:
                            cluster: user_service
                            timeout: 0s
                http_filters:
                  # JSON → gRPC Transcoder
                  - name: envoy.filters.http.grpc_json_transcoder
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                      proto_descriptor: "/etc/envoy/plugin/user.pb"   # 由 protoc 產生的 descriptor file
                      services: ["user.UserService"]           # 你的 gRPC Service
                      print_options:
                        add_whitespace: true
                        always_print_primitive_fields: true
                        preserve_proto_field_names: false
                  # Router filter (最後一個)
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: user_service
      type: logical_dns
      connect_timeout: 1s
      http2_protocol_options: {}   # gRPC 需要 HTTP/2
      load_assignment:
        cluster_name: user_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal  # 宿主機 gRPC server
                      port_value: 50051

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
